<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".job_add"
    android:background="@drawable/top_box">

    <TextView
        android:id="@+id/jobs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/jobs"
        android:textColor="#0E0D0D"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText

            android:id="@+id/companyname"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/companyname"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText

            android:id="@+id/title"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/category"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/cateogory"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/type"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/salary"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/salary"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/description"
            android:layout_width="380dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="6dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <Button
            android:id="@+id/postbutton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#31EF39"
            android:text="@string/postbutton"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>