<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/topBox"
        android:layout_width="443dp"
        android:layout_height="276dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:outlineAmbientShadowColor="@color/black"
        app:srcCompat="@drawable/top_box" />

    <ImageView
        android:id="@+id/jobImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topBox"
        app:srcCompat="@drawable/jobpic" />

    <TextView
        android:id="@+id/jobname"
        android:layout_width="330dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Job_List"
        android:textColor="#000000"
        android:textSize="@dimen/Selected_job_title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobImg" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="91dp">

        <ImageView
            android:id="@+id/dot1"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="228dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/dot" />

        <TextView
            android:id="@+id/jobCmpny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="220dp"
            android:text="@string/job_list_company"
            android:textColor="#000000"
            android:textSize="@dimen/selected_job_sub_ttle_size"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/dot2"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="228dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/dot" />

        <TextView
            android:id="@+id/joblocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="220dp"
            android:text="@string/Job_list_location"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/dot3"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="228dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/dot" />

        <TextView
            android:id="@+id/timejob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="220dp"
            android:text="@string/Job_list_duration"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/jobdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:elevation="2dp"
        android:text="@string/Job_list_desc"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBox" />

    <TextView
        android:id="@+id/decOfJob"
        android:layout_width="324dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_box"
        android:text="@string/Job_desc"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobdesc" />

    <TextView
        android:id="@+id/reqrmnts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Job_requirement"
        android:textColor="#000000"
        android:textSize="@dimen/selected_job_req_and_desc"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decOfJob" />

    <TextView
        android:id="@+id/jobrequrmnts"
        android:layout_width="327dp"
        android:layout_height="117dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_box"
        android:text="@string/Job_req"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqrmnts" />

    <Button
        android:id="@+id/applybtn"
        android:layout_width="215dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_box"
        android:text="@string/Job_apply_btn"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>